# legal-word-llm-addin

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  start.sh
backend/app/: main.py
backend/app/api/: routes_health.py  routes_legal.py
backend/app/core/: config.py  errors.py  logging_config.py
backend/app/providers/: base.py  factory.py  openai_compatible_provider.py  openrouter_provider.py
backend/app/schemas/: actions.py  chat.py  context.py  document.py  jobs.py  providers.py
backend/app/services/: action_validator.py  legal_job_service.py  legal_orchestrator.py  mock_legal_service.py  prompt_builder.py  request_limits.py
backend/app/services/context/: __init__.py  basic_signal_extractor.py  conflict_detector.py  context_builder.py  document_chunker.py  document_normalizer.py  legal_fact_extractor.py  llm_fact_extractor.py  retrieval_service.py  section_parser.py
backend/tests/: test_config.py  test_context_layer.py  test_health.py  test_legal_jobs.py  test_legal_orchestrator.py  test_mock_legal.py
frontend/: .eslintrc.json  babel.config.json  manifest.xml  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
frontend/src/commands/: commands.ts
frontend/src/taskpane/: commands.html  commands.ts  taskpane.css  taskpane.html  taskpane.ts  taskpane.tsx  taskpaneBootstrap.ts
frontend/src/taskpane/app/: App.ts
frontend/src/taskpane/components/: ContextMetadataPanel.tsx  ContextPanel.ts  (+4 more)
sample-documents/: sample_it_services_contract_risk.docx  sample_saas_dpa_contract_inconsistencies.docx
(+9 files in other folders)
